force/src/objects/Practice_Report_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configurable parameters for Practice Report query.</description>
    <fields>
        <fullName>Posting_Date_From__c</fullName>
        <label>Posting Date (From)</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Posting_Date_To__c</fullName>
        <label>Posting Date (To)</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Practice Report Settings</label>
</CustomObject>